8.quiz/service_quiz/3.service-front.yml
apiVersion: v1
kind: Service
metadata:
  name: front-svc
  namespace: delivery
spec:
  type: ClusterIP
  selector:
    app: front-app
  ports:
  - port: 30000
    targetPort: 80
