8.quiz/service_quiz/4.ingress-web.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  namespace: delivery
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: front-svc
            port:
              number: 30000
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: back-svc
            port:
              number: 20000
